--- a/jap_task2_backend/.gitignore
+++ b/jap_task2_backend/.gitignore
@@ -32,6 +32,11 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# Build results for test project
+
+../NUnitTests/bin/
+../NUnitTests/obj/
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
